# -*- Mode: Makefile -*-
#
# Makefile.am - docs automake file for Redland
#
# $Id: Makefile.am,v 1.38 2003/03/29 21:27:27 cmdjb Exp $
#
# Copyright (C) 2000-2001 David Beckett - http://purl.org/net/dajobe/
# Institute for Learning and Research Technology - http://www.ilrt.org/
# University of Bristol - http://www.bristol.ac.uk/
# 
# This package is Free Software or Open Source available under the
# following licenses (these are alternatives):
#   1. GNU Lesser General Public License (LGPL)
#   2. GNU General Public License (GPL)
#   3. Mozilla Public License (MPL)
# 
# See LICENSE.html or LICENSE.txt at the top of this package for the
# full license terms.
# 
# 

man_MANS=redland.3

EXTRA_DIST=perl.html $(man_MANS)
